Spacing fix

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -152,6 +152,10 @@ nav {
     display: inline-block;
   }
 }
+.nav-spacer {
+  width: 100%;
+  height: 57px;
+}
 
 input {
   display: block;
@@ -232,10 +236,6 @@ input[type='submit'] {
   font-weight: normal;
   font-size: 5vh;
   &.banner-blue { background-color: $blue1; }
-}
-.nav-spacer {
-  width: 100%;
-  height: 43px;
 }
 
 div[ng-view] {
